# Generated by Django 5.2 on 2026-04-27

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name="Shipment",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("order_id", models.PositiveIntegerField(unique=True)),
                ("user_id", models.PositiveIntegerField(db_index=True)),
                ("recipient_name", models.CharField(max_length=120)),
                ("phone", models.CharField(max_length=40)),
                ("address_line", models.CharField(max_length=255)),
                ("city_or_region", models.CharField(max_length=120)),
                ("postal_code", models.CharField(max_length=40)),
                ("country", models.CharField(max_length=120)),
                ("note", models.TextField(blank=True)),
                ("status", models.CharField(choices=[("pending", "Pending"), ("preparing", "Preparing"), ("shipped", "Shipped"), ("delivered", "Delivered"), ("cancelled", "Cancelled")], default="pending", max_length=20)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
            ],
            options={
                "ordering": ["-created_at", "-id"],
                "indexes": [
                    models.Index(fields=["user_id", "status"], name="shipments_user_status_idx"),
                    models.Index(fields=["status", "updated_at"], name="shipments_status_updated_idx"),
                ],
            },
        ),
    ]
